--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.1",
         "mysql": "^2.18.1",
+        "newman": "^5.3.2",
         "swagger-jsdoc": "^6.0.0",
         "swagger-ui-express": "^4.3.0",
         "xss-clean": "^0.1.1"
